add createjs support

--- a/index.html
+++ b/index.html
@@ -13,8 +13,14 @@
 
     <!-- JavaScript Section -->
 
-    <!-- Use the EaselJS CDN link -->
-    <script src="https://code.createjs.com/1.0.0/easeljs.min.js"></script>
+    <!-- CreateJS Libraries -->
+    <script src="./node_modules/easeljs/lib/easeljs.min.js"></script>
+    <script src="./node_modules/tweenjs/lib/tweenjs.min.js"></script>
+    <script src="./node_modules/soundjs/lib/soundjs.min.js"></script>
+    <script src="./node_modules/preloadjs/lib/preloadjs.min.js"></script>
+
+    <!-- Game Scripts -->
+
     <script src="./Scripts/core/game.js"></script>
 </body>
 </html>
